--- a/index.css
+++ b/index.css
@@ -7,7 +7,11 @@ body {
 .grid-container {
   height: 100vh;
   width: 100vw;
-  /* your properties here */
+  display: grid;
+}
+
+.bigItem {
+  grid-area: 
 }
 
 .grid-item {
