--- a/index.css
+++ b/index.css
@@ -12,6 +12,10 @@ body {
 }
 
 .bigItem {
+  grid-column-start: 1;
+grid-column-end: 3;
+grid-row-start: 1;
+grid-row-end: 3;
   grid-area: 2 / 2 / 4 / 4;
   height: 50%;
   width: 50%;
